transfer blog to new comp. + upload blog

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Mental Codeathon
 email: akharoukpp@gmail.com
 description: >-  # this means to ignore newlines until "baseurl:"
-  Moved to Cambridge to study English. Specialised in Creative Writing. Wrote a few novels and short films. Realised I loved to write but not as a career. Attended a simple HTML & CSS class. Fell in love with something that can be my career. Am now a training software developer. 
+  Moved to England to study English; turns out I prefer to code.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alexkharouk
