install babel, webpack, and finally got builds working to deploy with jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -34,10 +34,10 @@ google_analytics: UA-119470944-3
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
+exclude:
 #   - Gemfile
 #   - Gemfile.lock
-#   - node_modules
+  - node_modules
 #   - vendor/bundle/
 #   - vendor/cache/
 #   - vendor/gems/
