--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/Kharouk/kharouk.github.io/issues"
   },
-  "homepage": "https://github.com/Kharouk/kharouk.github.io#readme"
+  "homepage": "https://github.com/Kharouk/kharouk.github.io#readme",
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.6.0",
+    "react-addons-update": "^15.6.2",
+    "react-dom": "^16.6.0",
+    "webpack": "^4.24.0",
+    "webpack-cli": "^3.1.2"
+  }
 }
